--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:context=".MainActivity">
+		tools:context=".ui.MainActivity">
 	<SearchView
 			android:id="@+id/searshNote"
 			android:layout_width="match_parent"
@@ -21,6 +21,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:layout_marginTop="60dp"
+			tools:listitem="@layout/item_note"
 			app:layout_constraintTop_toBottomOf="@+id/searshNote"
 			app:layout_constraintBottom_toBottomOf="parent"
 	/>
