--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
 		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:tools="http://schemas.android.com/tools"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		tools:context=".ui.MainActivity">
-	<SearchView
-			android:id="@+id/searshNote"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_marginHorizontal="7dp"
-			android:layout_marginTop="5dp"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toTopOf="parent"/>
+		xmlns:tools="http://schemas.android.com/tools">
 
-	<androidx.recyclerview.widget.RecyclerView
-			android:id="@+id/showListNote"
+	<androidx.constraintlayout.widget.ConstraintLayout
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:layout_marginTop="60dp"
-			tools:listitem="@layout/item_note"
-			app:layout_constraintTop_toBottomOf="@+id/searshNote"
-			app:layout_constraintBottom_toBottomOf="parent"
-	/>
+			tools:context=".MainActivity">
 
-	<com.google.android.material.floatingactionbutton.FloatingActionButton
-			android:id="@+id/add_btn"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			app:layout_constraintEnd_toEndOf="parent"
-			android:layout_margin="25dp"
-			android:backgroundTint="#4CAF50"
-			android:src="@drawable/baseline_add_24"
-			app:layout_constraintBottom_toBottomOf="parent"
-			/>
+		<androidx.fragment.app.FragmentContainerView
+				android:id="@+id/fragmentContainerView"
+				android:name="androidx.navigation.fragment.NavHostFragment"
+				android:layout_width="0dp"
+				android:layout_height="0dp"
+				android:layout_marginStart="1dp"
+				android:layout_marginTop="1dp"
+				android:layout_marginEnd="1dp"
+				android:layout_marginBottom="1dp"
+				app:defaultNavHost="true"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent"
+				app:navGraph="@navigation/nav_graph" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
