--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -6,6 +6,7 @@
 		android:elevation="10dp"
 		app:cardCornerRadius="15dp"
 		app:cardElevation="10dp"
+		android:id="@+id/card_view"
 		android:layout_marginHorizontal="10dp"
 		android:layout_marginTop="5dp"
 		app:layout_constraintTop_toTopOf="parent"
