--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,14 @@
 <resources>
 	<color name="black">#FF000000</color>
 	<color name="white">#FFFFFFFF</color>
+
+	<color name="NoteColor1">#673AB7</color>
+	<color name="NoteColor2">#2196F3</color>
+	<color name="NoteColor3">#009688</color>
+	<color name="NoteColor4">#00BCD4</color>
+	<color name="NoteColor5">#4CAF50</color>
+	<color name="NoteColor6">#8BC34A</color>
+	<color name="NoteColor7">#FFFFFFFF</color>
+
+
 </resources>
