update and comment

--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -15,14 +15,14 @@
 				android:layout_height="wrap_content"
 				android:layout_alignParentTop="true"
 				android:layout_marginTop="16dp"
-				android:text="Add Note."
+				android:text="@string/add_note"
 				android:textStyle="bold"
 				android:textSize="24sp" />
 		<EditText
 				android:id="@+id/addNoteTitle"
 				android:layout_width="match_parent"
 				android:layout_height="60dp"
-				android:hint="Enter the title"
+				android:hint="@string/enter_the_title"
 				android:padding="12dp"
 				android:textSize="20sp"
 				android:layout_below="@id/addNoteHeading"
@@ -33,7 +33,7 @@
 				android:id="@+id/addNoteDesc"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:hint="Enter the description"
+				android:hint="@string/enter_the_description"
 				android:gravity="top"
 				android:padding="12dp"
 				android:textSize="18sp"
