--- a/app/src/main/res/layout/activity_splash_note.xml
+++ b/app/src/main/res/layout/activity_splash_note.xml
@@ -5,11 +5,11 @@
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:context=".ui.AddNoteActivity">
+		tools:context=".ui.SplashActivity">
 	<com.airbnb.lottie.LottieAnimationView
 			android:id="@+id/animationView"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
+			android:layout_width="300dp"
+			android:layout_height="300dp"
 			app:lottie_rawRes="@raw/noteanim"
 			app:lottie_autoPlay="true"
 			app:lottie_loop="true"
