--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 	  xmlns:app="http://schemas.android.com/apk/res-auto">
+
 	<item
 			android:id="@+id/searchMenu"
 			android:icon="@drawable/baseline_search_24"
-			android:title="Search"
+			android:title="@string/search"
 			app:showAsAction="ifRoom"
 			app:actionViewClass="androidx.appcompat.widget.SearchView" />
+
+	<item
+			android:title="Switch"
+			app:actionViewClass="android.widget.Switch"
+			app:showAsAction="always" />
+
 </menu>
