--- a/app/src/main/res/menu/menu_edit_note.xml
+++ b/app/src/main/res/menu/menu_edit_note.xml
@@ -3,7 +3,6 @@
 	  xmlns:app="http://schemas.android.com/apk/res-auto">
 	<item
 			android:id="@+id/deleteMenu"
-			android:icon="@drawable/baseline_delete_24"
-			android:title=""
+			android:title="Delete"
 			app:showAsAction="always"/>
 </menu>
