--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -18,17 +18,31 @@
 				android:text="@string/edit_note"
 				android:textStyle="bold"
 				android:textSize="24sp" />
-		<EditText
-				android:id="@+id/editNoteTitle"
-				android:layout_width="match_parent"
-				android:layout_height="60dp"
-				android:hint="@string/enter_the_title"
-				android:padding="12dp"
-				android:textSize="20sp"
-				android:layout_below="@id/editNoteHeading"
-				android:layout_marginTop="16dp"
-				android:maxLines="1"
-				/>
+
+		<com.google.android.material.textfield.TextInputLayout
+		android:id="@+id/textField"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:hint="@string/enter_the_title"
+		android:layout_marginTop="10dp"
+		app:endIconMode="clear_text"
+		app:counterEnabled="true"
+		app:counterMaxLength="35"
+		app:errorEnabled="true"
+		android:padding="12dp"
+		android:textSize="20sp"
+		android:layout_below="@id/editNoteHeading"
+		android:layout_marginHorizontal="15dp"
+		style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+		>
+			<EditText
+					android:id="@+id/editNoteTitle"
+					android:layout_width="match_parent"
+					android:layout_height="60dp"
+					/>
+
+		</com.google.android.material.textfield.TextInputLayout>
+
 		<EditText
 				android:id="@+id/editNoteDesc"
 				android:layout_width="match_parent"
@@ -37,7 +51,7 @@
 				android:gravity="top"
 				android:padding="12dp"
 				android:textSize="18sp"
-				android:layout_below="@id/editNoteTitle"
+				android:layout_below="@id/textField"
 				android:layout_marginTop="12dp" />
 		<com.google.android.material.floatingactionbutton.FloatingActionButton
 				android:id="@+id/editNoteFab"
