--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="black">#FF000000</color>
-	<color name="white">#FFFFFFFF</color>
+
 
 	<color name="NoteColor1">#673AB7</color>
 	<color name="NoteColor2">#2196F3</color>
@@ -10,6 +9,45 @@
 	<color name="NoteColor5">#4CAF50</color>
 	<color name="NoteColor6">#8BC34A</color>
 	<color name="NoteColor7">#FFFFFFFF</color>
+	
+	<color name="color100">#97E7E1 </color>
+	<color name="color200">#6AD4DD </color>
+	<color name="color300">#F8F6E3 </color>
+	<color name="color400">#7AA2E3 </color>
+
+	<!--    Light (Primary) -->
+	<color name="color_primary_light">#1CAB55</color>
+	<color name="color_primary_variant_light">#1CAB55</color>
+	<color name="color_on_primary_light">#A4F6AC</color>
+
+	<!--    Light (Brand Color) -->
+	<color name="color_secondary_light">#930F15</color>
+	<color name="color_secondary_variant_light">#930F15</color>
+	<color name="color_on_secondary_light">#E63C3C</color>
+
+	<!--    Dark (Primary) -->
+	<color name="color_primary_dark">#121212</color>
+	<color name="color_primary_variant_dark">#070A10</color>
+	<color name="color_on_primary">#332940</color>
+
+	<!--    Dark (Brand Color) -->
+	<color name="color_secondary_dark">#FF7597</color>
+	<color name="color_secondary_variant_dark">#FF0266</color>
+	<color name="color_on_secondary_dark">#332940</color>
+
+	<!--    Background colors -->
+	<color name="background_dark">#121212</color>
+	<color name="background_light">#FFFFFF</color>
+
+	<!--    Text colors -->
+	<color name="white">#FFFFFF</color>
+	<color name="white_2">#FAFAFA</color>
+	<color name="black">#000000</color>
+	<color name="black_2">#1A1A1A</color>
+
+	<!--   Icon Tint color -->
+	<color name="purple_500">#673FD0</color>
+
 
 
 </resources>
