--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,24 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 	<!-- Base application theme. -->
 	<style name="Base.Theme.Notes" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-		<!-- Customize your light theme here. -->
-		<!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+		<!-- Primary brand color. -->
+		<item name="colorPrimary">@color/color_primary_light</item>
+		<item name="colorPrimaryVariant">@color/color_primary_variant_light</item>
+		<item name="colorOnPrimary">@color/color_on_primary_light</item>
+
+		<!-- Secondary brand color. -->
+		<item name="colorSecondary">@color/color_secondary_light</item>
+		<item name="colorSecondaryVariant">@color/color_secondary_variant_light</item>
+		<item name="colorOnSecondary">@color/color_on_secondary_light</item>
+
+		<!-- Background and text colors for light mode. -->
+		<item name="android:windowBackground">@color/background_light</item>
+		<item name="android:textColorPrimary">@color/black</item>
+		<item name="android:textColorSecondary">@color/black_2</item>
 	</style>
 
 	<style name="Theme.Notes" parent="Base.Theme.Notes"/>
+	
+	<style name="DayNight" parent="Theme.AppCompat.DayNight.DarkActionBar">
+	</style>
 </resources>
